# weather-prediction-iot-pub

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
.cache/clangd/index/: _kiss_fft_guts.h.BACB542C5EEEB30C.idx  _kiss_fft_guts.h.FE6A841D1CC510EB.idx  activation_utils.h.484DAA42744E6E56.idx  activation_utils.h.9E94B1D360E415A9.idx  activations.cc.999DCEE4C8B67BB2.idx  activations.cc.EC72880816EF73E7.idx  activations.h.072816D14727DA29.idx  activations.h.CC973A81FD6DD9FC.idx  activations_common.cc.6715E7D1304E9094.idx  activations_common.cc.9A896855A46046D0.idx  add.cc.3563794FA1331287.idx  add.cc.6F897D075A1A03B0.idx  add.h.0412EDEC372F5B66.idx  add.h.054166949D498F99.idx  add.h.13EB2F005CE6BDCC.idx  add.h.2C3BD7929E0F6101.idx  add.h.42F0104BE968FA2A.idx  add.h.7F26DCF11EE8F749.idx  add_common.cc.A2F9B3117BEC1675.idx  add_common.cc.BFC74A1B23ECA057.idx  add_n.cc.13A29CD0A46621ED.idx  add_n.cc.2B794AEE930BBD9C.idx  add_n.h.2215D5B7836084BB.idx  add_n.h.8F3D0A801419361A.idx  allocator.h.48DB1848FD77870D.idx  allocator.h.A6B2673193E802F2.idx  arg_min_max.cc.48539C9BECF6199A.idx  arg_min_max.cc.D05680367C2604AC.idx  arg_min_max.h.2DC2B64F9E0EB27E.idx  arg_min_max.h.ED5A8E944F949251.idx  (+936 more)
main/: CMakeLists.txt  bme280_driver.cc  bme280_driver.h  button_handler.cc  button_handler.h  circle_buffer.cc  circle_buffer.h  data_structure.h  display_driver.cc  display_driver.h  idf_component.yml  inference_data.cc  inference_data.h  main.cc  model_data.cc  model_data.h  mqtt_helper.cc  mqtt_helper.h  power_manager.cc  power_manager.h  wifi_helper.cc  wifi_helper.h
